<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.belchingjalapeno.androidchip8.activitys.AssemblyActivity">
    <item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_build_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_run"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_folder_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_load"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="100"
        android:title="@string/action_save_as"
        app:showAsAction="never" />
</menu>
